[gd_scene load_steps=23 format=3 uid="uid://b8exv6qda8frv"]

[ext_resource type="Script" uid="uid://vrmuh1uggdac" path="res://main.gd" id="1_21msh"]
[ext_resource type="PackedScene" uid="uid://b54c7ad6cogrm" path="res://ui.tscn" id="1_ddoy4"]
[ext_resource type="Texture2D" uid="uid://cr7usmfo6apt8" path="res://Outsourced asset/Mini Pixel Pack 3/UI objects/GAME_OVER (72 x 8).png" id="2_ts3fu"]
[ext_resource type="Texture2D" uid="uid://o6gwbftsnc8c" path="res://Outsourced asset/Mini Pixel Pack 3/UI objects/START (48 x 8).png" id="3_osiot"]
[ext_resource type="Texture2D" uid="uid://cwuy4b17rh7ql" path="res://Outsourced asset/Mini Pixel Pack 3/Space_BG (2 frames) (64 x 64).png" id="4_k3sy0"]
[ext_resource type="PackedScene" uid="uid://b32476hejmrnj" path="res://addons/player.tscn" id="5_7bpry"]
[ext_resource type="Script" uid="uid://deltgphviysoo" path="res://Camera2D.gd" id="6_nnvno"]
[ext_resource type="AudioStream" uid="uid://c0jwdsbpivhtp" path="res://BALATRO [N163].mp3" id="8_hg1lf"]
[ext_resource type="PackedScene" uid="uid://duqc75liklrf" path="res://EnemyScene1.tscn" id="9_wm16j"]
[ext_resource type="PackedScene" uid="uid://cnud3hfcvjbhe" path="res://EnemyScene2.tscn" id="10_sdxdr"]
[ext_resource type="PackedScene" uid="uid://dho30yobd33m8" path="res://EnemyScene3.tscn" id="11_00o35"]
[ext_resource type="PackedScene" uid="uid://cndyogclaw7wd" path="res://EnemyScene4.tscn" id="12_bsm36"]
[ext_resource type="PackedScene" uid="uid://brr06le18oxho" path="res://fairy_enemy.tscn" id="13_vdhg6"]
[ext_resource type="PackedScene" uid="uid://c8yf3q0c8aksp" path="res://EnemyScene5.tscn" id="13_yaehf"]
[ext_resource type="PackedScene" uid="uid://btifyong6qwjv" path="res://EnemyScene6.tscn" id="14_074og"]
[ext_resource type="PackedScene" uid="uid://c3demk7a4ol6" path="res://fairy_enemy_right.tscn" id="14_8246c"]
[ext_resource type="Script" uid="uid://bskk8joq8ra1j" path="res://screen_area.gd" id="15_hrtit"]

[sub_resource type="Animation" id="Animation_frim2"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Background:region_rect")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Rect2(2.08165e-12, 2.08165e-12, 240, 320)]
}

[sub_resource type="Animation" id="Animation_lmpjc"]
resource_name = "new_animation"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Background:region_rect")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Rect2(2.08165e-12, 2.08165e-12, 240, 320), Rect2(2.08165e-12, -64, 240, 320)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_d33qh"]
_data = {
&"RESET": SubResource("Animation_frim2"),
&"new_animation": SubResource("Animation_lmpjc")
}

[sub_resource type="FastNoiseLite" id="FastNoiseLite_uf0tv"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_hymtj"]
size = Vector2(222.727, 320)

[node name="Main" type="Node2D"]
position = Vector2(164, 0)
script = ExtResource("1_21msh")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Polygon2D" type="Polygon2D" parent="CanvasLayer"]
visible = false
top_level = true
position = Vector2(164, 0)
color = Color(0, 0, 0, 1)
polygon = PackedVector2Array(176, -32, 422, -15, 413, 336, 242, 341, 243, 0, -2, 0, -2, 339, -190, 324, -180, -38)

[node name="UI" parent="CanvasLayer" instance=ExtResource("1_ddoy4")]
offset_left = 164.0

[node name="CenterContainer" type="CenterContainer" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Player" parent="CanvasLayer/CenterContainer" instance=ExtResource("5_7bpry")]
position = Vector2(284, 240)

[node name="GameOver" type="TextureRect" parent="CanvasLayer/CenterContainer"]
layout_mode = 2
texture = ExtResource("2_ts3fu")

[node name="Start" type="TextureButton" parent="CanvasLayer/CenterContainer"]
layout_mode = 2
size_flags_horizontal = 4
texture_normal = ExtResource("3_osiot")

[node name="Background" type="Sprite2D" parent="."]
texture_repeat = 2
position = Vector2(120, 160)
scale = Vector2(1.1, 1.1)
texture = ExtResource("4_k3sy0")
region_enabled = true
region_rect = Rect2(2.08165e-12, 2.08165e-12, 240, 320)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_d33qh")
}
autoplay = "new_animation"

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(120, 160)
script = ExtResource("6_nnvno")
noise = SubResource("FastNoiseLite_uf0tv")

[node name="EnemyAnchor" type="Node2D" parent="."]

[node name="StageMusic" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("8_hg1lf")
volume_db = 4.084
bus = &"Music"

[node name="ResourcePreloader" type="ResourcePreloader" parent="."]
resources = [PackedStringArray("EnemyScene1", "EnemyScene2", "EnemyScene3", "EnemyScene4", "EnemyScene5", "EnemyScene6", "fairy_enemy", "fairy_enemy_right"), [ExtResource("9_wm16j"), ExtResource("10_sdxdr"), ExtResource("11_00o35"), ExtResource("12_bsm36"), ExtResource("13_yaehf"), ExtResource("14_074og"), ExtResource("13_vdhg6"), ExtResource("14_8246c")]]

[node name="ScreenArea" type="Area2D" parent="."]
position = Vector2(120, 160)
scale = Vector2(1.1, 1.1)
script = ExtResource("15_hrtit")
metadata/_edit_lock_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="ScreenArea"]
shape = SubResource("RectangleShape2D_hymtj")

[node name="Walls" type="StaticBody2D" parent="."]
collision_layer = 17
collision_mask = 33

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Walls"]
position = Vector2(-22.6099, -6.94593)
scale = Vector2(0.274823, 0.559571)
polygon = PackedVector2Array(1024, -8, 1024, 600, 0, 600, 0, 0, -56, 0, -48, 656, 1072, 640, 1056, -64, 0, -64, 8, 0)

[connection signal="died" from="CanvasLayer/CenterContainer/Player" to="." method="_on_player_died"]
[connection signal="pressed" from="CanvasLayer/CenterContainer/Start" to="." method="_on_start_pressed"]
[connection signal="area_entered" from="ScreenArea" to="." method="_on_area_2d_area_entered"]
[connection signal="area_entered" from="ScreenArea" to="ScreenArea" method="_on_area_entered"]
[connection signal="area_exited" from="ScreenArea" to="." method="_on_area_2d_area_exited"]
[connection signal="area_exited" from="ScreenArea" to="ScreenArea" method="_on_area_exited"]
